# HUD.gd
extends CanvasLayer

@onready var mode_label = $MarginContainer/PanelContainer/VBoxContainer/HBoxContainer_Mode/LabelMode
@onready var mode_icon = $MarginContainer/PanelContainer/VBoxContainer/HBoxContainer_Mode/IconMode
@onready var coin_label = $MarginContainer/PanelContainer/VBoxContainer/HBoxContainer_Coins/LabelCoin

# SÅ‚ownik ikon (jeÅ›li uÅ¼ywasz Labeli z emoji jako ikon)
var mode_icons = {
	GameManager.MovementMode.WALK: "ğŸƒâ€â™‚ï¸",
	GameManager.MovementMode.FLY: "ğŸˆ",
	GameManager.MovementMode.CLIMB: "ğŸ§—",
	GameManager.MovementMode.SWIM: "ğŸŠ",
	GameManager.MovementMode.SLIDE: "ğŸ§Š"
}

func _ready():
	# 1. Policz monety na starcie poziomu
	# Musimy poczekaÄ‡ uÅ‚amek sekundy, aÅ¼ caÅ‚a mapa siÄ™ zaÅ‚aduje
	await get_tree().process_frame
	GameManager.reset_coins()
	
	# 2. PodÅ‚Ä…cz siÄ™ pod sygnaÅ‚ zmiany monet
	GameManager.coins_updated.connect(_on_coins_updated)
	
	# 3. OdÅ›wieÅ¼ tryb na start
	update_mode_display()

func _process(delta):
	# Sprawdzamy czy tryb siÄ™ zmieniÅ‚ (prosty sposÃ³b)
	# MoÅ¼na to teÅ¼ zrobiÄ‡ na sygnaÅ‚ach, ale w _process jest Å‚atwiej na poczÄ…tek
	update_mode_display()

func update_mode_display():
	var current = GameManager.current_mode
	var mode_name = GameManager.all_mode_names[current]
	
	mode_label.text = mode_name
	
	# JeÅ›li uÅ¼ywasz Labela jako ikony:
	if mode_icon is Label:
		mode_icon.text = mode_icons.get(current, "â“")
	
	# Opcjonalnie: ZmieÅ„ kolor tekstu w zaleÅ¼noÅ›ci od trybu
	match current:
		GameManager.MovementMode.FLY: mode_label.modulate = Color.SKY_BLUE
		GameManager.MovementMode.CLIMB: mode_label.modulate = Color.SADDLE_BROWN
		GameManager.MovementMode.SWIM: mode_label.modulate = Color.AQUA
		_: mode_label.modulate = Color.WHITE

func _on_coins_updated(collected, total):
	# Formatowanie tekstu: "3 / 10"
	coin_label.text = str(collected) + " / " + str(total)
	
	# --- EFEKT "JUICE" (SOCZYSTOÅšÄ†) ---
	# PowiÄ™ksz tekst na chwilÄ™, gdy zbierzesz monetÄ™ (prosta animacja)
	var tween = create_tween()
	coin_label.scale = Vector2(1.5, 1.5) # PowiÄ™ksz
	tween.tween_property(coin_label, "scale", Vector2(1.0, 1.0), 0.2) # WrÃ³Ä‡ do normy
